--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node",
   "version": "1.0.0",
   "description": "Primeira API",
-  "main": "server/server.js",
+  "main": "cmd/server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon cmd/server.js"
   },
   "author": "",
   "license": "ISC",
