--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Primeira API",
   "main": "cmd/server.js",
   "scripts": {
-    "start": "node cmd/server.js"
+    "start": "nodemon cmd/server.js"
   },
   "author": "",
   "license": "ISC",
