--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Primeira API",
   "main": "cmd/server.js",
   "scripts": {
+    "dev": "nodemon cmd/server.js",
     "start": "node cmd/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1192.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -16,10 +18,12 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.2.4",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
