--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@forkjs/group-router": "^1.0.5",
     "aws-sdk": "^2.1192.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -17,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-router-group": "^0.1.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
